playwright_output_13.log
SyntaxError: /home/ntn/git/not-the-news/tests/reset_button.spec.js: Unexpected token (64:2)

  62 |     const entryElementsCount = await page.locator('#items .entry').count();
  63 |     expect(entryElementsCount).toBe(0); // If feed is truly empty after reset
> 64 |   });
     |   ^
  65 | });
  66 |

   at tests/reset_button.spec.js:64

  62 |     const entryElementsCount = await page.locator('#items .entry').count();
  63 |     expect(entryElementsCount).toBe(0); // If feed is truly empty after reset
> 64 |   });
     |  ^
  65 | });
  66 |
Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

